# spriteforge

./: Cargo.toml  README.md
assets/: map_skeleton.json
assets/shaders/: tree_light.wgsl  water_foam.wgsl
configs/: grass.config
configs/debug/: debug_weight.config  debug_weight_tileset.config
configs/tile/: bush.config  dirt.config  dirt_to_grass.config  grass.config  grass_transition.config  path.config  path_transition.config  transition_grass.config  tree.config  water.config  water_transition.config
configs/tilesheet/: dirt.config  dirt_to_grass.config  grass.config  grass_transition.config  transition_grass.config  water.config  water_transition.config
crates/spriteforge_assets/: Cargo.toml
crates/spriteforge_assets/src/: lib.rs
crates/spriteforge_bevy/: Cargo.toml
crates/spriteforge_bevy/examples/: view_tilesheet.rs
crates/spriteforge_bevy/src/: lib.rs  map_layout.rs  map_paint.rs  map_raster.rs  map_skeleton.rs  minimap.rs  selection.rs
crates/spriteforge_bevy/src/map_generators/: map_skeleton.rs  mod.rs  path.rs  terrain.rs
src/: config.rs  lib.rs  main.rs  render.rs  tree.rs
src/render/: debug_weight.rs  dirt.rs  grass.rs  grass_transition.rs  mod.rs  path.rs  transition.rs  tree.rs  util.rs  water.rs
