[package]
name = "spriteforge"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
image = "0.25.2"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
spriteforge_assets = { path = "crates/spriteforge_assets" }

[workspace]
members = ["crates/spriteforge_bevy", "crates/spriteforge_assets"]
