[package]
name = "spriteforge_bevy"
version = "0.1.0"
edition = "2024"

description = "Bevy helpers for Spriteforge tilesheets"
license = "MIT"

[dependencies]
bevy = "0.14"
bevy_ecs_tilemap = { version = "0.14", features = ["atlas"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
rand = "0.8.5"
